--- a/ColorPicker/index.html
+++ b/ColorPicker/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" id="style" href="src/css/style.css">
-    <title>Document</title>
+    <title>Cambio de Tema</title>
 </head>
 <body>
     <h1>let meEquivoqueDeCarrera = "true"</h1>
-    <button type="button" name="theme" value="index" id="default">White</button>
-    <button type="button" name="theme" value="black" id="black">Black</button>
-    <input type="radio" name="theme" value="index" id="default" checked>
-    <input type="radio" name="theme" value="black" id="black">
+    
+    <div>
+        <button type="button" name="theme" value="index" id="default-button">Blanco</button>
+        <button type="button" name="theme" value="black" id="black-button">Negro</button>
+    </div>
 </body>
 <script src="./built/index.js"></script>
 </html>
