--- a/ColorPicker/index.html
+++ b/ColorPicker/index.html
@@ -13,6 +13,8 @@
     <div>
         <button type="button" name="theme" value="index" id="default-button">Blanco</button>
         <button type="button" name="theme" value="black" id="black-button">Negro</button>
+        <button type="button" name="theme" value="red" id="red-button">Rojo</button>
+        <button type="button" name="theme" value="blue" id="blue-button">Azul</button>
     </div>
 </body>
 <script src="./built/index.js"></script>
