--- a/ColorPicker/index.html
+++ b/ColorPicker/index.html
@@ -11,10 +11,10 @@
     <h1>let meEquivoqueDeCarrera = "true"</h1>
     
     <div>
-        <button type="button" name="theme" value="index" id="default-button">Blanco</button>
-        <button type="button" name="theme" value="black" id="black-button">Negro</button>
-        <button type="button" name="theme" value="red" id="red-button">Rojo</button>
-        <button type="button" name="theme" value="blue" id="blue-button">Azul</button>
+        <button type="button" name="theme" value="index" id="defaultButton">Blanco</button>
+        <button type="button" name="theme" value="black" id="blackButton">Negro</button>
+        <button type="button" name="theme" value="red" id="redButton">Rojo</button>
+        <button type="button" name="theme" value="blue" id="blueButton">Azul</button>
     </div>
 </body>
 <script src="./built/index.js"></script>
