--- a/ColorPicker/index.html
+++ b/ColorPicker/index.html
@@ -8,13 +8,14 @@
     <title>Cambio de Tema</title>
 </head>
 <body>
-    <h1>let meEquivoqueDeCarrera = "true"</h1>
-    
-    <div>
-        <button type="button" name="theme" value="index" id="defaultButton">Blanco</button>
-        <button type="button" name="theme" value="black" id="blackButton">Negro</button>
-        <button type="button" name="theme" value="red" id="redButton">Rojo</button>
-        <button type="button" name="theme" value="blue" id="blueButton">Azul</button>
+    <div class="first">
+        <button type="button" name="theme" value="index" id="yellow"></button>
+        <button type="button" name="theme" value="black" id="black"></button>
+        <button type="button" name="theme" value="red" id="red"></button>
+        <button type="button" name="theme" value="blue" id="blue"></button>
+    </div>
+    <div class="second">
+        <div id="help">A</div>
     </div>
 </body>
 <script src="./built/index.js"></script>
