--- a/ColorPicker/index.html
+++ b/ColorPicker/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="first">
-        <button type="button" name="theme" value="index" id="yellow"></button>
+        <button type="button" name="theme" value="index" id="green"></button>
         <button type="button" name="theme" value="black" id="black"></button>
         <button type="button" name="theme" value="red" id="red"></button>
         <button type="button" name="theme" value="blue" id="blue"></button>
