--- a/ObjectUse/index.html
+++ b/ObjectUse/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Date i String</title>
+    <title>BOM</title>
 </head>
 
 <body>
-    <label for="data">Data:</label><br>
-    <input type="text" id="data"><br><br>
-    <button onclick="diaDeLaSetmana()">Calcula</button>
+    <label for="data">Nombre:</label><br>
+    <input type="text" id="name"><br><br>
+    <button onclick="modificarBom()">Kaboom</button>
 </body>
 <script src="./built/index.js"></script>
 </html>
