--- a/VideoClub/index.html
+++ b/VideoClub/index.html
@@ -14,7 +14,12 @@
 
         <div>
             <input type="text" name="storage" id="storage">
-            <input type="button" id="storageB" value="Reserva Juegos Y Peliculas" />
+            <input onclick="storage()" type="button" id="storageB" value="Reserva Juegos Y Peliculas" />
+        
+            
         </div>
+            <input type="button" id="" value="Peliculas">
+            <input type="button" id="" value="Videojuegos">
+            <input type="button" id="" value="Ambos">
     </body>
 </html>
